--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~10.0.4",
     "firebase": "^7.13.1",
     "ngx-device-detector": "^1.4.6",
+    "ngx-embed-video": "^1.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
