still fixing mobile margins

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-device-detector": "^1.4.6",
     "ngx-embed-video": "^1.0.4",
     "rxjs": "~6.5.5",
+    "strip-ansi": "^6.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
